--- a/vishalUtech/templates/blog/blog_post_detail.html
+++ b/vishalUtech/templates/blog/blog_post_detail.html
@@ -55,7 +55,8 @@
                                     {% endwith %}
                                 </span>
                                 <span class="date">
-                                    <a href="http://demo.themingstrap.com/mashthirteen/2013/08/11/how-to-use-google-map-offline-in-iphone-or-ipad/"
+{#                                TODO MONTH URL#}
+                                    <a href="#"
                                        title="Permalink to How to Use Google map offline in iPhone or iPad"
                                        rel="bookmark">
                                         {% blocktrans with sometime=blog_post.publish_date|date:'F d, Y' %}
