--- a/vishalUtech/templates/partials/nav_bar.html
+++ b/vishalUtech/templates/partials/nav_bar.html
@@ -1,77 +1,88 @@
 {% load pages_tags %}
 {% load mezzanine_tags %}
 <h1>{% with get_categories  as categories %}
-{% for category in categories %}
-<h2>{{ category.title }}!</h2>
-{% endfor %}
+    {% for category in categories %}
+        <h2>{{ category.title }}!</h2>
+    {% endfor %}
 
 {% endwith %}</h1>
 <div id="navbar" class="navbar navbar-fixed-top">
-        <div class="nav-middle">
-             <div class="navbar-header">
-                <a class="navbar-brand" href="/" title="Mashthirteen Pro" rel="home">
-                    {{ settings.SITE_TITLE }}</a>
-            </div>
-            <div class="dropdown searchtoggel">
-                <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown"><i
-                        class="fa fa-search"></i><i class="fa fa-plus"></i>Share</a>
-
-                <div class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
-                        {% search_form %}
-                    <div id="social">
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="gplus"><i class="fa fa-google-plus"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-rss"></i></a>
-                        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-                        <a href="#" class="pinterest"><i class="fa fa-pinterest"></i></a>
-                    </div>
-
-                </div>
-            </div>
-            <nav id="site-navigation" class="navigation" role="navigation">
-                <a class="screen-reader-text skip-link" href="#content" title="Skip to content">Skip to content</a>
-
-                <div class="menu-mainmenu-container">
-                    <ul id="menu-mainmenu" class="nav-menu">
-                        {% include 'pages/menus/category_submenu.html' %}
-
-{#                        <li id="menu-item-219"#}
-{#                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-219">#}
-{#                            <a href="category/lifestyle/index.html">Lifestyle</a>#}
-{#                            <ul class="sub-menu">#}
-{#                                <li id="menu-item-225"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-225"><a#}
-{#                                        href="category/arts-entertainment/index.html">Arts &#038; Entertainment</a></li>#}
-{#                                <li id="menu-item-224"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-224"><a#}
-{#                                        href="category/foods-cuisine/index.html">Foods &#038; Cuisine</a></li>#}
-{#                                <li id="menu-item-230"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-230"><a#}
-{#                                        href="category/health-tips-2/index.html">Health Tips</a></li>#}
-{#                                <li id="menu-item-218"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-218"><a#}
-{#                                        href="category/yoga-fitness/index.html">Yoga &#038; Fitness</a></li>#}
-{#                                <li id="menu-item-217"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-217"><a#}
-{#                                        href="category/relationships-family/index.html">Relationships &#038; Family</a>#}
-{#                                </li>#}
-{#                                <li id="menu-item-223"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-223"><a#}
-{#                                        href="category/career/index.html">Career</a></li>#}
-{#                                <li id="menu-item-215"#}
-{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-215"><a#}
-{#                                        href="category/holidays-celebrations/index.html">Holidays &#038;#}
-{#                                    Celebrations</a></li>#}
-{#                            </ul>#}
-{#                        </li>#}
-                        {#            Include pages menu            #}
-                        {% page_menu "pages/menus/pages_as_submenu.html" %}
-                        {#            END Include                     #}
-                    </ul>
-                </div>
-
-
-            </nav>
+    <div class="nav-middle">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/" title="Mashthirteen Pro" rel="home">
+                {{ settings.SITE_TITLE }}</a>
         </div>
+        <div class="dropdown searchtoggel">
+            <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown"><i
+                    class="fa fa-search"></i><i class="fa fa-plus"></i>Share</a>
+            <div class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
+                {% search_form %}
+                <div id="social">
+                    <a class="facebook"
+               onclick="javascript:alert(window.location.hostname); mashFbSharrer(window.location.hostname, '{{ blog_post.content|slice:":128" }}','{{ blog_post.featured_image.url }}',520,350)"
+               href="javascript:return(0);"><i class="fa fa-facebook"></i></a>
+            <a class="twitter"
+               onclick="javascript:mashTwSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+            "="" href="javascript:return(0)"><i class="fa fa-twitter"></i></a>
+
+            <a class="gplus"
+               onclick="javascript:mashGpSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+            "="" href="javascript:return(0)"><i class="fa fa-google-plus"></i></a>
+
+            <a class="linkdeni"
+               onclick="javascript:mashLdSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+            "="" href="javascript:return(0)"><i class="fa fa-linkedin"></i></a>
+
+            <a class="pinterest"
+               onclick="javascript:mashPiSharrer(window.location.hostname, '{{ blog_post.title }}', '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+            "="" href="javascript:return(0)"><i class="fa fa-pinterest "></i></a>
+                </div>
+            </div>
+
+        </div>
+        <nav id="site-navigation" class="navigation" role="navigation">
+            <a class="screen-reader-text skip-link" href="#content" title="Skip to content">Skip to content</a>
+
+            <div class="menu-mainmenu-container">
+                <ul id="menu-mainmenu" class="nav-menu">
+                    {% include 'pages/menus/category_submenu.html' %}
+
+                    {#                        <li id="menu-item-219"#}
+                    {#                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-219">#}
+                    {#                            <a href="category/lifestyle/index.html">Lifestyle</a>#}
+                    {#                            <ul class="sub-menu">#}
+                    {#                                <li id="menu-item-225"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-225"><a#}
+                    {#                                        href="category/arts-entertainment/index.html">Arts &#038; Entertainment</a></li>#}
+                    {#                                <li id="menu-item-224"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-224"><a#}
+                    {#                                        href="category/foods-cuisine/index.html">Foods &#038; Cuisine</a></li>#}
+                    {#                                <li id="menu-item-230"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-230"><a#}
+                    {#                                        href="category/health-tips-2/index.html">Health Tips</a></li>#}
+                    {#                                <li id="menu-item-218"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-218"><a#}
+                    {#                                        href="category/yoga-fitness/index.html">Yoga &#038; Fitness</a></li>#}
+                    {#                                <li id="menu-item-217"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-217"><a#}
+                    {#                                        href="category/relationships-family/index.html">Relationships &#038; Family</a>#}
+                    {#                                </li>#}
+                    {#                                <li id="menu-item-223"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-223"><a#}
+                    {#                                        href="category/career/index.html">Career</a></li>#}
+                    {#                                <li id="menu-item-215"#}
+                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-215"><a#}
+                    {#                                        href="category/holidays-celebrations/index.html">Holidays &#038;#}
+                    {#                                    Celebrations</a></li>#}
+                    {#                            </ul>#}
+                    {#                        </li>#}
+                    {#            Include pages menu            #}
+                    {% page_menu "pages/menus/pages_as_submenu.html" %}
+                    {#            END Include                     #}
+                </ul>
+            </div>
+
+
+        </nav>
     </div>
+</div>
