--- a/vishalUtech/templates/account/login.html
+++ b/vishalUtech/templates/account/login.html
@@ -21,17 +21,19 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
-  <div class="login-or">{% trans 'or' %}</div>
+  {% comment 'login form disable %}
+    <div class="login-or">{% trans 'or' %}</div>
+  {% endcomment %}
 
 </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
+  {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
-
+{% comment 'login form disable %}
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
@@ -41,5 +43,6 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
+{% endcomment %}
 
 {% endblock %}
