--- a/vishalUtech/templates/generic/comments.html
+++ b/vishalUtech/templates/generic/comments.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends "base.html" %}
 
 {% load mezzanine_tags comment_tags keyword_tags custom_comment_tags %}
@@ -18,3 +19,4 @@
     {% custom_comments_for obj %}
     </div>
 {% endblock %}
+
