--- a/vishalUtech/templates/pages/menus/footer_top_psots.html
+++ b/vishalUtech/templates/pages/menus/footer_top_psots.html
@@ -1,4 +1,7 @@
-{% for blog_post in blog_posts_top_viewed %}
+{% load custom_blog_tags %}
+
+{% most_popular "5" as blog_posts %}
+{% for blog_post in blog_posts %}
     <li>
         <h3>
             <a href="{{ blog_post.get_absolute_url }}">
