--- a/vishalUtech/templates/partials/nav_bar.html
+++ b/vishalUtech/templates/partials/nav_bar.html
@@ -9,7 +9,7 @@
 <div id="navbar" class="navbar navbar-fixed-top">
     <div class="nav-middle">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/" title="Mashthirteen Pro" rel="home">
+            <a class="navbar-brand" href="/" title="{{ settings.SITE_TITLE }}" rel="home">
                 {{ settings.SITE_TITLE }}</a>
         </div>
         <div class="dropdown searchtoggel">
