--- a/vishalUtech/templates/generic/includes/comments_login_modal.html
+++ b/vishalUtech/templates/generic/includes/comments_login_modal.html
@@ -1,21 +1,46 @@
+{% load socialaccount %}
+
 <div class="modal fade" id="comment_login" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-            </div>
             <div class="modal-body">
-                <h3>Modal Body</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+                <h1>Sign In</h1>
+                <p>
+                    Get more than ever out of {{ settings.SITE_TITLE }}.
+                </p>
+                <p>
+                    Build your own personal story stream, participate in discussions, easily share your favorite stories, and connect with what your friends are sharing.
+                </p>
+                <p>
+                    Just select your favorite social network to get started.
+                </p>
+                <div id="social-icons">
+                    <a href='{% provider_login_url "facebook" method="oauth2" next="request.get_full_path" %}'><i class="fa fa-facebook-square"></i></a></li>
+                    <a href='{% provider_login_url "twitter" method="oauth2" next=request.get_full_path %}'><i class="fa fa-twitter"></i></a></li>
+                    <a href='{% provider_login_url "google" method="oauth2" next=request.get_full_path %}'><i class="fa fa-google-plus"></i></a></li>
+                    <a href='{% provider_login_url "linkedin" method="oauth2" next=request.get_full_path %}'><i class="fa fa-linkedin-square"></i></a></li>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+
     </div>
   </div>
 </div>
 
-<a href="#" class="btn btn-lg btn-success"
+{% comment %}<a href="#" class="btn btn-lg btn-success"
    data-toggle="modal"
    data-target="#comment_login">Click to open Modal</a>
+{% endcomment %}
+
+{% comment %}
+    vertical center script to place modal in the middle of screen
+{% endcomment %}
+<script>
+    $('.modal').on('shown.bs.modal', function() {
+    $(this).find('.modal-dialog').css({
+        'margin-top': function () {
+            return ($(this).outerHeight() / 2);
+        }
+    });
+});
+</script>
