--- a/vishalUtech/static/css/comment_form.css
+++ b/vishalUtech/static/css/comment_form.css
@@ -158,3 +158,111 @@
     height: 29px;
 }
 
+
+.modal-dialog {
+    max-width: 1440px;
+    margin: auto;
+    position: relative;
+}
+
+.modal-body {
+    font-size: 18px;
+    font-family: ProximaNovaRegular, Arial, Sans-serif;
+    background: #fff;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 960px;
+    line-height: 1.5;
+    color: #555;
+}
+
+.modal-body h1 {
+    color: #555;
+    /*font-size: 48px;*/
+    /*font-size: 4.8rem;*/
+    margin: 0 -15px 48px;
+    font-weight: normal;
+    font-family: MuseoSlabLight,Arial,Sans-serif;
+    padding: 0 15px;
+}
+
+.modal-body p {
+    margin: 0 0 25px;
+}
+
+.modal-dialog {
+    width: 70%;
+}
+
+
+#social-icons a {
+    margin: 10px;
+}
+
+.modal-content i.fa {
+    font-size: 55px;
+}
+
+.modal-content i.fa-facebook-square {
+    color: #3b5998;
+    transition:color 0.4s;
+    -moz-transition:color 0.4s; /* Firefox 4 */
+    -webkit-transition:color 0.4s; /* Safari and Chrome */
+    -o-transition:color 0.4s;
+}
+
+.modal-content i.fa-facebook-square:hover {
+    color: #32497f;
+}
+
+.modal-content i.fa-twitter {
+    color: #00aced;
+    transition:color 0.4s;
+    -moz-transition:color 0.4s; /* Firefox 4 */
+    -webkit-transition:color 0.4s; /* Safari and Chrome */
+    -o-transition:color 0.4s;
+}
+
+.modal-content i.fa-twitter:hover {
+    color: #0089bb;
+}
+
+.modal-content i.fa-google-plus {
+    color: #dd4b39;
+    transition:color 0.4s;
+    -moz-transition:color 0.4s; /* Firefox 4 */
+    -webkit-transition:color 0.4s; /* Safari and Chrome */
+    -o-transition:color 0.4s;
+}
+
+.modal-content i.fa-google-plus:hover {
+    color: #b53d2d;
+}
+
+.modal-content i.fa-linkedin-square {
+    color: #007bb6;
+    transition:color 0.4s;
+    -moz-transition:color 0.4s; /* Firefox 4 */
+    -webkit-transition:color 0.4s; /* Safari and Chrome */
+    -o-transition:color 0.4s;
+}
+
+.modal-content i.fa-linkedin-square:hover {
+    color: #005f8b;
+}
+
+
+
+.modal-dialog-center { /* Edited classname 10/03/2014 */
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+@media (max-width: 767px) {
+  .modal-dialog-center { /* Edited classname 10/03/2014 */
+    width: 100%;
+  }
+}
+
