--- a/vishalUtech/templates/generic/includes/comments_login_modal.html
+++ b/vishalUtech/templates/generic/includes/comments_login_modal.html
@@ -16,10 +16,10 @@
                     Just select your favorite social network to get started.
                 </p>
                 <div id="social-icons">
-                    <a href='{% provider_login_url "facebook" method="oauth2" next="request.get_full_path" %}'><i class="fa fa-facebook-square"></i></a></li>
-                    <a href='{% provider_login_url "twitter" method="oauth2" next=request.get_full_path %}'><i class="fa fa-twitter"></i></a></li>
-                    <a href='{% provider_login_url "google" method="oauth2" next=request.get_full_path %}'><i class="fa fa-google-plus"></i></a></li>
-                    <a href='{% provider_login_url "linkedin" method="oauth2" next=request.get_full_path %}'><i class="fa fa-linkedin-square"></i></a></li>
+                    <a href='{% provider_login_url "facebook" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-facebook-square"></i></a></li>
+                    <a href='{% provider_login_url "twitter" method="oauth2" next=request.get_full_path %#comment}'><i class="fa fa-twitter"></i></a></li>
+                    <a href='{% provider_login_url "google" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-google-plus"></i></a></li>
+                    <a href='{% provider_login_url "linkedin" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-linkedin-square"></i></a></li>
                 </div>
             </div>
 
@@ -44,3 +44,17 @@
     });
 });
 </script>
+{% comment %}
+login on click textarea, prevents to sending post without login
+{% endcomment %}
+{% if request.user.is_authenticated %}
+    <script>
+        $(document).on('ready', function(){
+
+            $(body).on('click', '.nicEdit-main', function(){
+               $('#comment_login').modal('show');
+            });
+
+        });
+    </script>
+{% endif %}
