media for modal

--- a/vishalUtech/static/css/comment_form.css
+++ b/vishalUtech/static/css/comment_form.css
@@ -194,6 +194,13 @@
     width: 70%;
 }
 
+@media screen and (max-width: 1000px){
+    .modal-dialog {
+    width: 100%;
+    }
+
+}
+
 
 #social-icons a {
     margin: 10px;
